fix word spacing of code

--- a/themes/jack-q-blog/source/css/main.less
+++ b/themes/jack-q-blog/source/css/main.less
@@ -136,6 +136,7 @@ pre, kbd, code{
 }
   
 pre {
+  word-spacing: initial;
   .comment,
   .title {
     color: #999;
